# eigent

./: .env.development  .gitignore  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  electron-builder.json  entitlements.mac.plist  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1753782969125-f2b417d9fc657.mjs  vitest.config.ts
backend/: .gitignore  README.md  cli.py  main.py  messages.pot  pyproject.toml
backend/app/: __init__.py
backend/app/command/: __init__.py
backend/app/component/: babel.py  code.py  command.py  debug.py  encrypt.py  environment.py  model_validation.py
backend/app/component/pydantic/: i18n.py
backend/app/controller/: chat_controller.py  model_controller.py  task_controller.py  tool_controller.py
backend/app/exception/: exception.py  handler.py
backend/app/middleware/: __init__.py
backend/app/model/: chat.py
backend/app/service/: chat_service.py  task.py
backend/app/utils/: agent.py  single_agent_worker.py  workforce.py
backend/app/utils/listen/: toolkit_listen.py
backend/app/utils/server/: sync_step.py
backend/app/utils/toolkit/: abstract_toolkit.py  audio_analysis_toolkit.py  code_execution_toolkit.py  craw4ai_toolkit.py  excel_toolkit.py  file_write_toolkit.py  github_toolkit.py  google_calendar_toolkit.py  google_drive_mcp_toolkit.py  google_gmail_mcp_toolkit.py  human_toolkit.py  hybrid_browser_python_toolkit.py  hybrid_browser_toolkit.py  image_analysis_toolkit.py  linkedin_toolkit.py  markitdown_toolkit.py  mcp_search_toolkit.py  note_taking_toolkit.py  notion_mcp_toolkit.py  notion_toolkit.py  openai_image_toolkit.py  pptx_toolkit.py  pyautogui_toolkit.py  reddit_toolkit.py  screenshot_toolkit.py  search_toolkit.py  slack_toolkit.py  terminal_toolkit.py  thinking_toolkit.py  twitter_toolkit.py  video_analysis_toolkit.py  video_download_toolkit.py  web_deploy_toolkit.py  whatsapp_toolkit.py
(+147 files in other folders)
